@@ -1,5 +1,7 @@
 *SVN*
 
+# Allow the #simple_format text_helper to take an html_options hash for each paragraph.  #2448 [Francois Beausoleil, thechrisoshow]
+
 * Fix regression from filter refactoring where re-adding a skipped filter resulted in it being called twice.  [rick]
 
 * Refactor filters to use Active Support callbacks.  #11235 [Josh Peek]
